# Winston

./: .gitignore  LICENSE  README.md  config.toml.example  pyproject.toml
bot/: __init__.py  __main__.py  bot.py  config.py
bot/database/: __init__.py  manager.py  objects.py  schema.sql
bot/models/: __init__.py  errors.py  plugin.py  tree.py
bot/plugins/: misc.py
bot/plugins/leveling/: __init__.py  plugin.py  render.py
bot/plugins/utils/: __init__.py  converters.py  plugin.py
bot/utilities/: __init__.py  formatting.py
bot/views/: __init__.py  base.py  embed.py  paginator.py
